--- a/lab 1/animation/index.html
+++ b/lab 1/animation/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>animation</title>
     <link rel="stylesheet" href="styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="script.js"></script>
 </head>
 <body>
