--- a/lab 1/assignment/ass1.html
+++ b/lab 1/assignment/ass1.html
@@ -10,28 +10,28 @@
 <body>
     <div class="container-fluid  px-4">
         <div class="row">
-            <div class="col-lg-2 col-md-12 d-flex d-lg-block justify-content-center justify-content-md-between align-items-center flex-wrap flex-md-nowrap my-2 px-5">
+            <div class="col-lg-2 col-md-12 d-flex d-lg-block justify-content-center justify-content-md-between align-items-center flex-wrap flex-md-nowrap my-2 px-3">
                 <img src="images/logo.png" width="130px" alt="logo-img" class=" order-2 order-md-1 mt-2 p-2">
                 <div class="d-flex d-lg-block justify-content-between order-1 order-md-2 my-4 " >
                     <div class="d-flex flex-column flex-lg-row align-items-center text-center mx-2 mx-lg-0">
                         <img src="images/icon1.png" width="30px" height="30px" alt="logo" class="d-none d-md-inline m-1">
-                        <a class="m-2">Tastemakers</a>
+                        <a class="m-1 m-md-2">Tastemakers</a>
                     </div>
                     <div class="d-flex flex-column flex-lg-row  align-items-center text-center mx-2 mx-lg-0">
                         <img src="images/icon2.png" width="30px" height="30px" alt="logo" class="d-none d-md-inline m-1">
-                        <a class="m-2">Blog</a>
+                        <a class="m-1 m-md-2">Blog</a>
                     </div>
                     <div class="d-flex flex-column flex-lg-row  align-items-center text-center mx-2 mx-lg-0">
                         <img src="images/icon3.png" width="30px" height="30px" alt="logo" class="d-none d-md-inline m-1">
-                        <a class="m-2">The A-List</a>
+                        <a class="m-1 m-md-2">The A-List</a>
                     </div>
                     <div class="d-flex flex-column flex-lg-row  align-items-center text-center mx-2 mx-lg-0">
                         <img src="images/icon4.png" width="30px" height="30px" alt="logo" class="d-none d-md-inline m-1">
-                        <a class="m-2">Contribute</a>
+                        <a class="m-1 m-md-2">Contribute</a>
                     </div>
                     <div class="d-flex flex-column flex-lg-row  align-items-center text-center mx-2 mx-lg-0">
                         <img src="images/icon5.png" width="30px" height="30px" alt="logo" class="d-none d-md-inline m-1">
-                        <a class="m-2">About</a>
+                        <a class="m-1 m-md-2">About</a>
                     </div>
                 </div>
                 <div class="d-none d-lg-block">
