final labs modification

--- a/lab 1/effects 2/index.html
+++ b/lab 1/effects 2/index.html
@@ -19,6 +19,7 @@
         <h1>Activities</h1>
         <div>
               <div class="activity">
+                <div>
                     <img src="images/1.png">
                     <div class="contacts">
                         <div class="contact-img">
@@ -35,40 +36,45 @@
                         </div>
                         
                     </div>
+                </div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, quasi! Non error tempora cupiditate vitae ipsa possimus atque similique expedita nam adipisci tempore vel, maiores explicabo facere obcaecati, nobis consectetur.</p>
               </div>
               <div class="activity">
-                <img src="images/2.png">
-                <div class="contacts">
-                    <div class="contact-img">
-                        <div class="facebook"></div>
-                    </div>
-                    <div class="contact-img">
-                        <div class="twitter"></div>
-                    </div>
-                    <div class="contact-img">
-                        <div class="insta"></div>
-                    </div>
-                    <div class="contact-img">
-                        <div class="youtube"></div>
+                <div>
+                    <img src="images/2.png">
+                    <div class="contacts">
+                        <div class="contact-img">
+                            <div class="facebook"></div>
+                        </div>
+                        <div class="contact-img">
+                            <div class="twitter"></div>
+                        </div>
+                        <div class="contact-img">
+                            <div class="insta"></div>
+                        </div>
+                        <div class="contact-img">
+                            <div class="youtube"></div>
+                        </div>
                     </div>
                 </div>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, quasi! Non error tempora cupiditate vitae ipsa possimus atque similique expedita nam adipisci tempore vel, maiores explicabo facere obcaecati, nobis consectetur.</p>
             </div>
             <div class="activity">
-                <img src="images/p3.jpg">
-                <div class="contacts">
-                    <div class="contact-img">
-                        <div class="facebook"></div>
-                    </div>
-                    <div class="contact-img">
-                        <div class="twitter"></div>
-                    </div>
-                    <div class="contact-img">
-                        <div class="insta"></div>
-                    </div>
-                    <div class="contact-img">
-                        <div class="youtube"></div>
+                <div>
+                    <img src="images/p3.jpg">
+                    <div class="contacts">
+                        <div class="contact-img">
+                            <div class="facebook"></div>
+                        </div>
+                        <div class="contact-img">
+                            <div class="twitter"></div>
+                        </div>
+                        <div class="contact-img">
+                            <div class="insta"></div>
+                        </div>
+                        <div class="contact-img">
+                            <div class="youtube"></div>
+                        </div>
                     </div>
                 </div>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, quasi! Non error tempora cupiditate vitae ipsa possimus atque similique expedita nam adipisci tempore vel, maiores explicabo facere obcaecati, nobis consectetur.</p>
