--- a/lab 2/output/index.html
+++ b/lab 2/output/index.html
@@ -3,9 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyDYc3yQr8s-p2TN7kCHZ_duz8d6tg6giVU"></script>
+    <script src="script.js"></script>
     <title>Document</title>
 </head>
 <body>
+    <main>
+        <section>
+            <h3>ADDITION</h3>
+           <input type="number" id="plusA" value="0" min="0">
+           <span>+</span>
+           <input type="number" id="plusB" value="0" min="0">
+           <span>=</span>
+           <output id="sum" for="plusA plusB"></output>
+        </section>
+        <section>
+            <h3>MULTIPLICATION</h3>
+           <input type="number" id="multiA" value="0" min="0">
+           <span>*</span>
+           <input type="number" id="multiB" value="0" min="0">
+           <span>=</span>
+           <output id="multi" for="multiA multiB"></output>
+        </section>
+    </main>
     
 </body>
 </html>
