--- a/lab 2/sass/index.html
+++ b/lab 2/sass/index.html
@@ -3,9 +3,73 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="sass_project/stylesheets/styles.css">
+    <script src="script.js"></script>
     <title>Document</title>
 </head>
 <body>
+    <main class="container-fluid p-2">
+        <nav class="row">
+            <button class="bg-main btn border-light rounded-50">Gaudi</button>
+            <button class="bg-main btn border-light rounded-50">Park Guell</button>
+            <button class="bg-main btn border-light rounded-50">Casa Batllo`</button>
+            <button class="bg-main btn border-light rounded-50">Casa Milo</button>
+        </nav>
+        <div class="row mb-5 banner">
+            <span>
+                <p>Antonin Gaudi</p>
+                <p>Artist & Architect</p>
+            </span>
+            <img src="images/banner.png" alt="banner">
+        </div>
+        <section class="row">
+            <div class="col-12 col-md-3 col-lg-6 card">
+                <img src="images/1.png" class="border-dark p-lg-4">
+                <div class="pr-4">
+                    <h3>Antonio Gaudi</h3>
+                    <p> The voices of Barcelona blur in a mix of Spanish and Catalan in much the way Gaudi's work blurs the lines between architecture and artwork.</p>
+                    <p> From the tiled benches in Guell Park to the towers over Casa Mila and Casa Batt16, I fell in love with Goudi's work on my first trip to Barcelona.</p>   
+                </div>
+            </div>
+
+            <div class="col-12 col-md-3 col-lg-6 card">
+                <img src="images/2.png" class="border-dark p-lg-4 ">
+                <div class="pr-4">
+                    <h3>Park Guell</h3>
+                    <p> The benches as Lizard fountain in Park Guell make up part of the UNESCO World Heritage Site know as, "The Works of Antonio Gaudi."</p> 
+                    <p>The park features Gaudi's famous Lizard Fountain, as well as benches and other extraordinary examples of Gaudi's talent with tiles.  </p>   
+                </div>
+            </div>
+
+            <div class="col-12 col-md-3 col-lg-6  card">
+                <img src="images/3.png" class="border-dark p-lg-4 ">
+                <div class="pr-4">
+                    <h3>Casa Batllo`</h3>
+                    <p> The first time I strolled down the Passeig de Gricia (Catalan for the Promenade of Grace), I stopped in my tracks in front of Gaudi's Casa Batllo`</p> 
+                    <p>The 'house,' wedged between two 'normal' buildings, looks more like a giant sculpture than any house I'd ever seen anywhere else.</p>   
+                </div>
+            </div>
+
+            <div class="col-12 col-md-3 col-lg-6 card">
+                <img src="images/4.png" class="border-dark p-lg-4 ">
+                <div class="pr-4">
+                    <h3>Casa Mila</h3>
+                    <p> A popular attraction in Barcelona, Casa Mila, also known as La Pedrera, is arguably one of the most famous buildings designed by Gaudi. </p>
+                    <p>The roof features a collection of chimneys and towers that like they'd fit right in as characters in a Dr. Suess book.</p> 
+                </div>
+            </div>
+            
+        </section>
+        <footer class="row bg-accent rounded-50 p-2">
+            <p class="m-2">Copyright 2012. All rights reserved.</p>
+            <p class="m-2"> 
+                Web design by Janine Warner.
+                <a href="https//:www.digitalfamily.com">https//:www.digitalfamily.com.</a>
+                Photos by
+                <a href="https://www.istockphoto.com">https://www.istockphoto.com</a>
+            </p>
+        </footer>
+    </main>
     
 </body>
 </html>
