--- a/lab 2/drag/index.html
+++ b/lab 2/drag/index.html
@@ -3,9 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <script src="script.js"></script>
     <title>Document</title>
 </head>
 <body>
+    <main>
+        <section>
+            <img src="images/1.png">
+            <img src="images/2.png">
+            <img src="images/3.png">
+            <img src="images/4.png">
+            <img src="images/5.png">
+            <img src="images/6.png">
+            <img src="images/7.png">
+            <img src="images/8.png">
+        </section>
+        <section class="dropSec"></section>
+    </main>
     
 </body>
 </html>
