--- a/lab 2/geolocation/index.html
+++ b/lab 2/geolocation/index.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyDYc3yQr8s-p2TN7kCHZ_duz8d6tg6giVU"></script>
+    <script src="script.js"></script>
     <title>Document</title>
 </head>
 <body>
+    <main>
+        <section>
+            <button>Display Map</button>
+            <button>Detailed Information</button>
+
+        </section>
+        <section class="displaySec">
+            <div></div>
+        </section>
+    </main>
     
 </body>
 </html>
