--- a/lab 2/video/index.html
+++ b/lab 2/video/index.html
@@ -3,9 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <script src="script.js"></script>
     <title>Document</title>
 </head>
 <body>
+    <main>
+        <section>
+            <div class="buttons">
+                <button data-videoSrc="video/0.mp4" class="clicked">Video 1</button>
+                <button data-videoSrc="video/1.mp4">Video 2</button>
+                <button data-videoSrc="video/2.mp4">Video 3</button>
+                <button data-videoSrc="video/3.mp4">Video 4</button>
+                <button data-videoSrc="video/0.mp4">Video 5</button>
+                <button data-videoSrc="video/1.mp4">Video 6</button>
+                <button data-videoSrc="video/2.mp4">Video 7</button>
+                <button data-videoSrc="video/3.mp4">Video 8</button>
+                <button data-videoSrc="video/0.mp4">Video 9</button>
+                <button data-videoSrc="video/1.mp4">Video 10</button>
+                <button data-videoSrc="video/2.mp4">Video 11</button>
+                <button data-videoSrc="video/3.mp4">Video 12</button>
+                <button data-videoSrc="video/0.mp4">Video 13</button>
+                <button data-videoSrc="video/1.mp4">Video 14</button>
+                <button data-videoSrc="video/2.mp4">Video 15</button>
+                <button data-videoSrc="video/3.mp4">Video 16</button>
+                <button data-videoSrc="video/0.mp4">Video 17</button>
+                <button data-videoSrc="video/1.mp4">Video 18</button>
+                <button data-videoSrc="video/2.mp4">Video 19</button>
+                <button data-videoSrc="video/3.mp4">Video 20</button>               
+            </div>
+
+        </section>
+        <section>
+            <div class="container">
+                <video src="Video/0.mp4" autoplay muted>
+            </div>
+        </section>
+    </main>
     
 </body>
 </html>
